# calorie-ai

./: .gitignore  README.md
backend/: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607100001_create_auth_tables.py  202607100002_create_food_logs_table.py  202607100003_add_food_log_confidence_updated_at.py  202607100004_add_food_log_nutrition_summary.py  202607100005_food_logs_composite_index.py
backend/app/: main.py
backend/app/api/dependencies/: auth.py  rate_limit.py  uploads.py
backend/app/api/v1/: auth.py  dashboard.py  foods.py  health.py  history.py  router.py  uploads.py
backend/app/config/: constants.py  settings.py
backend/app/core/: logging.py
backend/app/db/: base.py  session.py
backend/app/exceptions/: base.py  handlers.py
backend/app/models/: __init__.py  food_log.py  refresh_token.py  user.py
backend/app/providers/: ai.py  openai_provider.py
backend/app/repositories/: food_logs.py  history.py  refresh_tokens.py  users.py
backend/app/schemas/: ai.py  auth.py  dashboard.py  foods.py  uploads.py
backend/app/security/: jwt.py  password.py  tokens.py
backend/app/services/: ai.py  auth.py  foods.py  history.py  storage.py
backend/tests/: test_config.py  test_health.py  test_security.py
docs/: 01_project_overview.md  02_software_requirements.md  03_SYSTEM_ARCHITECTURE.md  04_database_design.md  05_api_specifications.md  06_AI_ENGINE.md  06_development_roadmap.md  07_PROMPT_ENGINEERING.md
frontend/: .gitignore  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app.dart  main.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner/: Info.plist
frontend/test/: calorie_summary_card_overflow_test.dart  nutrition_card_overflow_test.dart  widget_test.dart
frontend/web/: index.html
(+157 files in other folders)
