[project]
name = "calorie-ai-backend"
version = "0.1.0"
description = "AI-powered calorie tracking backend built with FastAPI."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Calorie AI" }]
keywords = ["fastapi", "sqlalchemy", "openai", "nutrition", "async"]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "openai>=2.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations are largely generated; don't enforce line length on them.
"alembic/versions/*" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are intentionally used as default
# argument values and are safe (immutable) despite being function calls.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.File",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
